fix(module:theme): fix button + button spacing of transfer options when enabled preserveWhitespaces
- close https://github.com/ng-alain/ng-alain/issues/900

--- a/packages/theme/styles/app/ng/_preserve-white-spaces.less
+++ b/packages/theme/styles/app/ng/_preserve-white-spaces.less
@@ -21,6 +21,13 @@
       margin-left: -1px;
     }
   }
+
+  // fix ng-zorro-antd components
+  .@{ant-prefix}-transfer-operation {
+    .@{ant-prefix}-btn + .@{ant-prefix}-btn {
+      margin-left: initial;
+    }
+  }
 }
 
 .preserve-white-spaces-mixin(@preserve-white-spaces-enabled);
